<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shinjuku_map</name>
  <version>0.0.0</version>
  <description>Shinjuku map point clound and lanelet2</description>
  <maintainer email="piotr.zyskowski@robotec.ai">Piotr Zyskowski</maintainer>
  <license>Attribution-NonCommercial 4.0 International</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
